# RL-Cyber

./: .dockerignore  .gitignore  .hfignore  CODEBASE_INDEX.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  grading.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
configs/: production_policy.yaml
cyber_openenv_rl/: __init__.py  client.py  grading.py  models.py  tasks.py
cyber_openenv_rl/connectors/: base.py  elastic.py  splunk.py
cyber_openenv_rl/core/: __init__.py  policies.py  simulator.py
cyber_openenv_rl/data/: __init__.py  real_dataset.py
cyber_openenv_rl/deployment/: __init__.py  guardrails.py  realtime_defender.py  run_realtime_defense.py  telemetry_adapter.py
cyber_openenv_rl/eval/: __init__.py  baseline_inference.py  benchmark_suite.py  metrics.py  scripted_baseline.py
cyber_openenv_rl/rl/: __init__.py  attacker_gym_env.py  gym_env.py  test_model.py  train_attacker.py  train_curriculum.py  (+2 more)
docker/: docker-init  docker-proxy
openenv_cyber_openenv_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  cyber_environment.py  requirements.txt
tests/: test_determinism.py  test_environment.py  test_grader.py  test_guardrails.py  test_openenv_validate.py  test_real_data.py  test_realtime_defense.py  test_training_smoke.py  verify_siem_approval.py
tools/: __init__.py  generate_codebase_index.py
trained_models/: defender_dqn_medium_vec_normalize.pkl  defender_ppo_easy_vec_normalize.pkl  summary_dqn_medium.json  summary_ppo_easy.json  summary_ppo_medium.json
(+12 files in other folders)
